kibana/sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elk-kibana
  namespace: logging
  labels:
    app: elk-kibana
spec:
  ports:
  - port: 80
    targetPort: 5601
    name: http
  selector:
    app: elk-kibana
