kibana/sample/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elk-kibana
  namespace: logging
spec:
  rules:
  - host: kibana.example.com
    http:
      paths:
      - backend:
          serviceName: elk-kibana
          servicePort: 80
